tests/cases/compiler-development/artifact/errors/diagnostic-ambiguous-module.diagnostic
diagnostic error code=M0001 family=module message="ambiguous module file for 'diagnostic_ambiguous_module'; candidates tests/cases/compiler-development/artifact/errors/diagnostic_ambiguous_module.ari, tests/cases/compiler-development/artifact/errors/diagnostic_ambiguous_module/mod.ari" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-ambiguous-module.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-ambiguous-module.ari" bytes=67
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-ambiguous-module.ari" line=1 column=5 end_line=1 end_column=32 byte_start=4 byte_end=31 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-ambiguous-module.ari:1:5\n   |\n 1 | mod diagnostic_ambiguous_module;\n   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^"
  Note index=0 location=none message="Ari treats each file-backed module name as a single source identity within one search root"
  Help index=0 location=none message="keep only one of name.ari, name.arih, name/mod.ari, or name/mod.arih in a search root"
